assets/css/style.css
/* ... */
#beyond-limits-content > img {
  width: 190px;
  height: auto;
  border-radius: 20%;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
  position: absolute;
  top: 2%;
  left: 23%;
  transform: translate(-35%);
}

#beyond-limits-text {
  text-align: center;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 10px 10px 3px;
  border-radius: 5px;
  font-size: 58%;
  position: absolute;
  left: 65%;
  transform: translate(-15%);
  list-style-type: none;
  word-spacing: 1px;
  line-height: 10px;
}

#beyond-limits-text > li:not(last-child) {
margin-bottom: 10px;
}

#beyond-limits-button img {
  position: absolute;
  width: 110px;
  top: 82%;
  left: 67%;
  transform: translate(-15%);
}

.yellow-text {
  color: #ffcb05;
}

.big-text {
  font-size: 200%;
  vertical-align: sub;
}

/* Mindful Earth */
#mindful-earth {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  height: 400px;
  margin-top: 10px;
}

#mindful-heading {
display: flex;
position: relative;
}

#mindful-heading > h2 {
  margin-top: 20px;
  color: white;
  font-size: 200%;
  font-weight: 400;
  font-family: 'ABeeZee', 'Arial Narrow Bold', sans-serif;
  text-transform: uppercase;
}

#mindful-heading > img {
  width: 80px;
  height: auto;
  margin: 0 auto 0;
}

#mindful-earth-content {
  position: relative;
  height: 380px;
  width: 100%;
  background-image: url("../images/black-background-torn.webp");
  background-size: cover;
  display: flex;
}

#mindful-earth-content > img {
  width: auto;
  height: 190px;
  border-radius: 20%;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.9);
  position: absolute;
  top: 10%;
  left: 62%;
  transform: translate(-35%);
}

#mindful-earth-text {
  text-align: center;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 10px 10px 3px;
  border-radius: 5px;
  font-size: 58%;
  position: absolute;
  width: 35%;
  top: 3%;
  left: 10%;
  transform: translate(-15%);
  list-style-type: none;
  word-spacing: 1px;
  line-height: 10px;
}

#mindful-earth-text > li:not(last-child) {
margin-bottom: 10px;
}

#mindful-button img {
  position: absolute;
  width: 100px;
  top: 80%;
  left: 13%;
  transform: translate(-15%);
}

.green-text {
  color: #779d30;
}

/* Go Further Page */

/* Go Further Hero Section */

#go-further-main {
  display: flex;
  flex-grow: 1;
  background-image: url('../images/go-further-hero.webp');
  background-size: auto 100%;
  background-position-x: 45%;
  background-attachment: fixed;
}

#go-further-hero {
  height: 700px;
}

#go-further-hero > h1 {
  position: absolute;
  top: 550px;
  left: 26%;
  padding: 15px;
  border-radius: 10px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  text-align: right;
  font-size: 250%;
  font-weight: 750;
  font-style: italic;
  text-transform: uppercase;
  line-height: 40px;
}

#go-further-hero > h2 {
  position: absolute;
  top: 605px;
  left: 22%;
  max-width: 265px;
  padding: 8px 6px;
  border-radius: 10px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  background-color: #eed4bb;
  color: rgba(0, 0, 0, 0.6);
  text-align: right;
  text-transform: uppercase;
  font-size: 100%;
  font-weight: 750;
  font-style: italic;
}

/*Go Further Form */
#go-further-signup {
  width: 90%;
  padding: 20px;
  border-radius: 0px 10px 10px 0;
  color: white;
  background-color: rgba(0, 0, 0, 0.9);
  text-align: left;
  font-size: 85%;
  margin-bottom: 50px;
  box-shadow: 4px 4px 10px black;
}

#form-heading {
  font-size: 110%;
  margin-bottom: 10px;
}

#go-further-signup select {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  width: 200px;
  border-radius: 5px;
}

#name {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  border-radius: 10px;
  width: 200px;
  text-align: center;
}

#age {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  border-radius: 10px;
  width: 50px;
  text-align: center;
}

#go-further-signup textarea {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  border-radius: 5px;
}

#email {
  margin-left: 10px;
  border-radius: 5px;
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
}

#phone-number {
  margin-left: 25px;
  border-radius: 5px;
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
}

#form-button {
  font-family: "anybody", arial, sans-serif;
  font-size: 120%;
  background-color: #eed4bb;
  color: rgba(0, 0, 0, 0.6);
  padding: 10px;
  border-radius: 7px;
  border: none;
  box-shadow: 1px 1px 5px rgba(150, 150, 150, 0.5);
}

#form-button:hover {
  box-shadow: none;
  color: #eed4bb;
  background-color: rgba(100, 100, 100, 0.5);
}

/* Walk-Ins Section */
#walk-ins {
position: relative;
height: 600px;
max-width: 600px;
}

#walk-ins-text {
  position: absolute;
  width: auto;
  top: 20px;
  left: 20%;
  padding: 10px;
  min-height: 227px;
  border-radius: 10px 0 0 0;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  background-color: rgba(0, 0, 0, 0.9);
  color: white;
  text-align: right;
}

#walk-ins-text > h2 {
margin-bottom: 10px;
}

#walk-ins-text > h3 {
  margin-bottom: 10px;
  }

#map {
  position: absolute;
  top: 227px;
  left: 20%;
  height: 250px;
  width: 80%;
  border-radius: 0 0 0 10px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  margin: 20px auto 30px;
}

/* Form-Submitted Page */

#form-submitted {
  background-image: url('/assets/images/submitted-hero.webp');
  background-size: cover;
  background-attachment: fixed;
  width: 100%;
  background-position: 50%;
  height: 750px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

#form-submitted h1, h2, h3 {
background-color: rgba(0, 0, 0, 0.7);
color: white;
}

#form-submitted h1 {
  text-transform: uppercase;
  font-size: 250%;
  padding: 20px;
}

#form-submitted h2 {
  font-size: 100%;
  padding: 0 20px 20px;
}

#form-submitted h3 {
  font-size: 90%;
  padding: 0 20px 20px;
}
/* ... */

